# anoma-beta-documentation

./: Cargo.toml  README.md
examples/hello-world/: .env.example
examples/hello-world-start/: .gitignore  Cargo.toml  README.md
examples/hello-world-start/crates/hello_world_app/: Cargo.toml
examples/hello-world-start/crates/hello_world_app/src/: init.rs  main.rs  util.rs
examples/hello-world-start/crates/hello_world_library/: Cargo.toml
examples/hello-world-start/crates/hello_world_library/elf/: id.txt
examples/hello-world-start/crates/hello_world_witness/: Cargo.toml
examples/hello-world-start/crates/hello_world_witness/src/: lib.rs
examples/hello-world/crates/hello_world_app/: Cargo.toml
examples/hello-world/crates/hello_world_app/src/: init.rs  main.rs  util.rs  utils.rs
examples/hello-world/crates/hello_world_library/: Cargo.toml
examples/hello-world/crates/hello_world_library/src/: lib.rs
examples/hello-world/crates/hello_world_logic_circuit/: Cargo.toml
examples/hello-world/crates/hello_world_logic_circuit/hello_world_methods/: Cargo.toml
examples/hello-world/crates/hello_world_logic_circuit/hello_world_methods/hello_world_guest/: Cargo.toml
examples/hello-world/crates/hello_world_logic_circuit/hello_world_methods/hello_world_guest/src/: main.rs
examples/hello-world/crates/hello_world_logic_circuit/src/: lib.rs
examples/hello-world/crates/hello_world_witness/: Cargo.toml
